@@ -7,6 +7,7 @@ Version 0.9.22
        * #259 implement LoadAchievements
        * #380 Callback on CreateWithInvitationScreen
        * #445 Variant error in turn based match
+       * #617 Get all turn-based matches
 Version 0.9.21
   **BREAKING CHANGES**
        * #382 Callback for declined invitation when creating RTMP room
